@@ -381,6 +381,7 @@
 												definition = "default"
 
 												label = _ "Reselect difficulty"
+												tooltip = _ "Change campaign difficulty before loading"
 											[/toggle_button]
 
 										[/column]
@@ -400,6 +401,7 @@
 												definition = "default"
 
 												label = _ "Show replay"
+												tooltip = _ "Play the embedded replay from the saved game if applicable"
 											[/toggle_button]
 
 										[/column]
@@ -418,6 +420,7 @@
 												definition = "default"
 
 												label = _ "Cancel orders"
+												tooltip = _ "Cancel any pending unit movements in the saved game"
 											[/toggle_button]
 
 										[/column]
